@@ -1,5 +1,8 @@
 ChangeLog for the Astro project.
 
+20190911:
+	* fix const in AzmAltConverter class
+
 20190909:
 	* add ConstellationCatalog to catalog library
 	* add normalization to Point class
